force-app/main/default/objects/Patient__c/Patient__c.object-meta.xml
<CustomObject>
    <description>EMR patient record. All clinical and demographic data lives on custom fields; Contact lookup is optional.</description>
    <label>Patient</label>
    <nameField>
        <displayFormat>PT-{00000000}</displayFormat>
        <label>Patient ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>