force-app/main/default/objects/Patient__c/fields/Allergy_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Allergy_Review_Status__c</fullName><label
  >Allergy Review Status</label><type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted
      >false</sorted>
        <value><fullName>Unknown</fullName><default>true</default><label
        >Unknown</label></value>
        <value><fullName>No known allergies</fullName><default
        >false</default><label>No known allergies</label></value>
        <value><fullName>Allergies recorded</fullName><default
        >false</default><label>Allergies recorded</label></value>
    </valueSetDefinition></valueSet>
</CustomField>