force-app/main/default/objects/Patient__c/fields/Allergy_Reviewed_At__c.field-meta.xml
<CustomField><fullName
  >Allergy_Reviewed_At__c</fullName><label>Allergy Reviewed At</label><type
  >DateTime</type></CustomField>