force-app/main/default/objects/Patient__c/fields/Allergy_Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Allergy_Reviewed_By__c</fullName><label
  >Allergy Reviewed By</label><type>Lookup</type>
    <referenceTo>User</referenceTo><relationshipName
  >Allergy_Reviews</relationshipName><deleteConstraint
  >SetNull</deleteConstraint>
</CustomField>