force-app/main/default/objects/Patient__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <defaultValue>"US"</defaultValue>
    <label>Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>