force-app/main/default/objects/Patient__c/fields/MRN__c.field-meta.xml
<CustomField>
    <fullName>MRN__c</fullName>
    <externalId>true</externalId>
    <label>MRN</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>