force-app/main/default/objects/Patient__c/listViews/Active_Patients.listView-meta.xml
<ListView>
    <fullName>Active_Patients</fullName>
    <columns>NAME</columns>
    <columns>Last_Name__c</columns>
    <columns>First_Name__c</columns>
    <columns>MRN__c</columns>
    <columns>Date_of_Birth__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Patients</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>